# ares

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  candle.rs  deal.rs  lib.rs  position.rs  serde_helpers.rs  symbol.rs  tick.rs  timeframe.rs
crates/mt5-client/: Cargo.toml
crates/mt5-client/src/: client.rs  error.rs  lib.rs  types.rs
docs/: autonomous-session-2026-06-09.md
scripts/: portfolio_sim.py
src/: backtest.rs  detector.rs  helpers.rs  lib.rs  live.rs  main.rs  telegram.rs
web/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/api/account/: route.ts
web/app/api/deals/: route.ts
web/app/api/orders/: route.ts
web/app/api/positions/: route.ts
web/app/backtest/: page.tsx
web/app/trades/: page.tsx
web/components/: AresLogo.tsx  EquityChart.tsx  LiveDashboard.tsx  Nav.tsx  PendingOrdersTable.tsx  PositionsTable.tsx  TradesRefresher.tsx
web/lib/: format.ts  github.ts  mt5.ts
