[workspace]
members  = [".", "crates/domain", "crates/mt5-client"]
resolver = "2"

[package]
name    = "ares"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ares"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
chrono             = { version = "0.4", features = ["serde"] }
dotenvy            = "0.15"
futures-util       = "0.3"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rust_decimal       = { version = "1", features = ["serde"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

domain     = { path = "crates/domain" }
mt5-client = { path = "crates/mt5-client" }
