[package]
name    = "mt5-client"
version = "0.1.0"
edition = "2024"

[dependencies]
domain     = { path = "../domain" }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
